2008-08-29  Nick Garnett  <nickg@ecoscentric.com>

	* src/flashiodev.c (flashiodev_init): Assign
	CYG_DEVTAB_STATUS_BLOCK to status field of device table
	entries. This causes devfs to call the right read/write
	operations.

2008-06-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/flashdev.c (FLASH_TEST_LENGTH): Reduce to a
	multiple of 0x20000 as some flash parts (especially if
	they are in fact multiple chips in parallel) have that
	block size.
	Try opening jffs2test FIS partition if flashtest doesn't exist.

2007-05-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/flashiodev.c (flashiodev_get_config): Support new
	CYG_IO_GET_CONFIG_FLASH_DEVADDR key to get flash device
	base address.
	* include/flash.h: Associated structure for key.
	* doc/flash.sgml: Document CYG_IO_GET_CONFIG_FLASH_DEVADDR.

2006-12-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/flash1.c: Replace FLASH_ERR_OK with CYG_FLASH_ERR_OK.
	* tests/flashdev.c: Ditto. Also flash_errmsg ->
	cyg_flash_errmsg. And some warning cleanups.

	* src/flashiodev.c (flashiodev_lookup): Correct misplaced else
	with respect to #ifdefs. Fix for bug 1000355.

2006-12-18  Nick Garnett  <nickg@ecoscentric.com>

	* src/flash_legacy.h (FLASH_Enable, FLASH_Disable): Add casts to
	these macros since the calls in the source don't present the right
	types. This is mainly an exercise in suppressing compiler
	warnings.

2006-12-07  Nick Garnett  <nickg@ecoscentric.com>

	* tests/flashdev.c (cyg_start): Fix bug, b.offset should be
	initialized to 0. Until now it was some random value on the stack,
	why this has never bitten us before is a mystery.

2006-10-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/legacy_dev.c (legacy_flash_program): Define block_size.

2006-10-03  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/flash.sgml: Bring into line with actual implementation.
	Also some trivial typos.

2006-08-01  Jonathan Larmour  <jifl@eCosCentric.com>
